--- a/01_agama/samyukta/01/SA1_1-4.md
+++ b/01_agama/samyukta/01/SA1_1-4.md
@@ -44,7 +44,7 @@ next: SA1_5.html
 <h3 id="notes">Notes</h3>
 
 <ol>
-<li id="n1">These four <em>sūtra</em>s (SĀ 1.1-4) are  <em>sūtra</em> no. 1 in the <cite>Taisho</cite> edition (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001a06" target="_blank">T99.2.1a6-15</a>). Close Pali parallels include <a href="https://suttacentral.net/sn22.12" target="_blank">SN 22.12</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a>.<br/>
+<li id="n1">These four <em>sūtra</em>s (SĀ 1.1-4) are <em>sūtra</em> no. 1 in the <cite>Taisho</cite> edition and nos. 1-4 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001a06" target="_blank">T99.2.1a6-15</a>). Close Pali parallels include <a href="https://suttacentral.net/sn22.12" target="_blank">SN 22.12</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a>.<br/>
 These <em>sūtra</em>s follow the same template, the only difference being the substitution of the keywords “impermanent,” “painful,” “empty,” and “not self.” Compare these <em>sūtra</em>s with <a href="../02/SA2_1.html" target="_blank">SĀ 2.1-4 (188)</a>, which apply the same template to the six sense fields (i.e., vision, hearing, smelling, taste, tactile feelings, and mental perceptions). This parallelism is consistent between SĀ 1.1-10 and SĀ 2.1-10.<br/>
 The Chinese translator(s) in SĀ 2.1-4 employed clearer grammatical structures and vocabulary choices than they did here. E.g., 觀察 is clearer than 觀 for the meaning “to observe.” 正見 appears more correct than 正觀 when we compare these <em>sūtra</em>s with their Pali counterparts. And dependent clauses are used instead of topicalized subjects to express the progression from right observation to liberation. Looking beyond these minor differences, the source texts for SĀ 1.1-4 and SĀ 2.1-4 appear to be identical or nearly so.<br/>
 The sudden change from one style of translation to another may indicate that either different translators worked on the project at different times, or perhaps there was a hiatus during which the same translator’s style changed. [<a href="#ref1">back</a>]</li>
