--- a/01_agama/samyukta/02/SA2_7.md
+++ b/01_agama/samyukta/02/SA2_7.md
@@ -7,33 +7,40 @@ previous: SA2_6.html
 next: SA2_8.html
 ---
 
-# [The Related Discourses](../index.html)
-## [2. The Sense Fields](index.html)
-### 7 (191). Not Knowing (2)
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>2. The Sense Fields</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一九一） 不知</th>
+  <th class='en'>7 (191). Not Knowing (2)</th>
+  <tr>
+    <td title='t99.2.49c4'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.49c5'>爾時，世尊告諸比丘： 「於眼若不識、不知、不斷、不離欲者，不堪任越生、老、病、死苦。 耳、鼻、舌、身、意，不識、不知、不斷、不離欲者，不堪任越生、老、病、死苦。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone doesn’t know and understand the eye, and they don’t stop and become free of desire for it, they aren’t capable of transcending the suffering of birth, old age, illness, and death. If someone doesn’t know and understand the ear … nose … tongue … body … mind, and they don’t stop and become free of desire for it, they aren’t capable of transcending the suffering of birth, old age, illness, and death.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.49c8'>「諸比丘，於色若識、若知、若斷、若離欲者，堪任越生、老、病、死苦。 於耳、鼻、舌、身、意，若識、若知、若斷、若離欲，堪任越生、老、病、死苦。」</td>
+    <td id='p3'>3. “Monks, if someone knows and understands the eye, and they stop and become free of desire for it, they’re capable of transcending the suffering of birth, old age, illness, and death. If they know and understand the ear … nose … tongue … body … mind, and they stop and become free of desire for it, they’re capable of transcending the suffering of birth, old age, illness, and death.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.49c11'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “If someone doesn’t know and understand and doesn’t stop and become free of desire for the eye, it isn’t possible for them to transcend the suffering of birth, old age, illness, and death. Not knowing and understanding or stopping and becoming free of desire for the ear … nose … tongue … body … mind, it isn’t possible to transcend the suffering of birth, old age, illness, and death.
-{:#p2}
+<hr/>
 
-3\. “Monks, if someone knows and understands and stops and becomes free of desire for the eye, it’s possible for them to transcend the suffering of birth, old age, illness, and death. If they know and understand and stop and become free of desire for the ear … nose … tongue … body … mind, it’s possible for them to transcend the suffering of birth, old age, illness, and death.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 191 in the <cite>Taisho</cite> edition and no. 185 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049c04" target="_blank">T99.2.49c4-12</a>). It uses the same template as <a href="../01/SA1_7.html" target="_blank">SĀ 1.7</a>, which is a narrower version of the one we find in <a href="https://suttacentral.net/sn35.26" target="_blank">SN 35.26</a>-<a href="https://suttacentral.net/sn35.27" target="_blank">27</a> that covers more than the six sense fields. [<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 March 2024</p>
 
-### Notes
-
-1. {:#n1} This sūtra shares the same template as [SĀ 1.7](../01/SA1_7.html){:target="_blank"}, and it’s a simpler version of [SN 35.26](https://suttacentral.net/sn35.26){:target="_blank"}-[27](https://suttacentral.net/sn35.27){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 21 October 2022
-{: .revised}
-
----
+<hr/>
