--- a/01_agama/samyukta/02/SA2_8.md
+++ b/01_agama/samyukta/02/SA2_8.md
@@ -1,39 +1,46 @@
 ---
 layout: default
-title: 'The Related Discourses | 2. The Sense Fields | 8 (192). Not Knowing (3)'
+title: 'The Related Discourses | 2. The Sense Fields | 8 (192). Free of Desire'
 type: kramdown
 base: ../../../
 previous: SA2_7.html
 next: SA2_123.html
 ---
 
-# [The Related Discourses](../index.html)
-## [2. The Sense Fields](index.html)
-### 8 (192). Not Knowing (3)
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>2. The Sense Fields</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{: #p1}
+<table class="trans">
+  <th class='ch'>（一九二） 離欲</th>
+  <th class='en'>8 (192). Free of Desire</th>
+  <tr>
+    <td title='t99.2.49c13'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.49c14'>爾時，世尊告諸比丘： 「若於眼不離欲，心不解脫者，不堪任正盡苦。 於耳、鼻、舌、身、意不離欲，心不解脫者，不堪任正盡苦。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “If someone doesn’t become free of desire for the eye, their mind isn’t liberated, and they aren’t capable of correctly ending suffering. If they don’t become free of desire for the ear … nose … tongue … body … mind, their mind isn’t liberated, and they aren’t capable of correctly ending suffering.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.49c17'>「諸比丘，若於眼色離欲，心解脫者，彼堪任正盡苦。 於耳、鼻、舌、身、意離欲，心解脫者，堪任正盡苦。」</td>
+    <td id='p3'>3. “Monks, if someone is free of desire for the eye, their mind is liberated, and they’re capable of correctly ending suffering. If someone is free of desire for the ear … nose … tongue … body … mind, their mind is liberated, and they’re capable of correctly ending suffering.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.49c19'>佛說此經已，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p4'>4. After the Buddha spoke this <em>sūtra</em>, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “If someone doesn’t become free of desire for the eye, their mind isn’t liberated, and it isn’t possible for them to correctly end suffering. If they don’t become free of desire for the ear … nose … tongue … body … mind, their mind isn’t liberated, and it isn’t possible for them to correctly end suffering.
-{:#p2}
+<hr/>
 
-3\. “Monks, if someone is free of desire for the eye, their mind is liberated, and it’s possible for them to correctly end suffering. Being free of desire for the ear … nose … tongue … body … mind, their mind is liberated, and it’s possible for them to correctly end suffering.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 192 in the <cite>Taisho</cite> edition and no. 186 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0049c13" target="_blank">T99.2.49c13-20</a>). It’s very similar to <a href="../01/SA1_8.html" target="_blank">SĀ 1.8</a>, which is a simpler version of <a href="https://suttacentral.net/sn35.26" target="_blank">SN 35.26</a>-<a href="https://suttacentral.net/sn35.27" target="_blank">27</a>. However, “know and understand” (知、明) has been omitted. [<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 15 March 2024</p>
 
-### Notes
-
-1. {:#n1} This sūtra shares the same template as [SĀ 1.8](../01/SA1_8.html){:target="_blank"}, and it’s a simpler version of [SN 35.26](https://suttacentral.net/sn35.26){:target="_blank"}-[27](https://suttacentral.net/sn35.27){:target="_blank"}. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 21 October 2022
-{: .revised}
-
----
+<hr/>
