--- a/01_agama/samyukta/01/SA1_145.md
+++ b/01_agama/samyukta/01/SA1_145.md
@@ -7,51 +7,68 @@ previous: SA1_143.html
 next: SA1_146.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 145 (33). Not Self
+<h1><a href='../index.html'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（三三） 非我</th>
+  <th class='en'>145 (33). Not Self</th>
+  <tr>
+    <td title='t99.2.7b22'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b23'>爾時，世尊告諸比丘： 「色非是我。 若色是我者，不應於色病、苦生，亦不應於色欲：『令如是、不令如是』。 以色無我故，於色有病、有苦生，亦得於色欲：『令如是、不令如是』。 受、想、行、識亦復如是。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Form is not self. If form were self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be these desires about form: ‘Let it be so; let it not be so.’ Because form has no self, illness and pain arise from it, and these desires become possible: ‘Let it be so; let it not be so.’ <em>Feeling, conception, volition, and awareness are likewise.</em></td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b27'>「比丘，於意云何？ 色為是常，為無常耶？」</td>
+    <td id='p3'>3. “Monks, what do you think? Is form permanent, or is it impermanent?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b28'>比丘白佛： 「無常，世尊。」</td>
+    <td>The monks said to the Buddha, “Impermanent, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b29'>「比丘，若無常者，是苦不？」</td>
+    <td id='p4'>4. “Monks, if something is impermanent, is it painful?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7b29'>比丘白佛： 「是苦，世尊。」</td>
+    <td>The monks said to the Buddha, “It’s painful, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7c1'>「若無常、苦，是變易法。 多聞聖弟子於中寧見有我、異我、相在不？」</td>
+    <td id='p5'>5. “If it’s impermanent and painful, it’s liable to change. Given that, would a well-versed noble disciple see form as having self, as being other than self, or that either form or self is present in the other?”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7c2'>比丘白佛： 「不也，世尊。」</td>
+    <td>The monks said to the Buddha, “No, Bhagavān.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7c3'>「受、想、行、識亦復如是。 是故，比丘，諸所有色，若過去、若未來、若現在，若內、若外，若麁、若細，若好、若醜，若遠、若近，彼一切非我、不異我、不相在。 如是觀察。 受、想、行、識亦復如是。</td>
+    <td id='p6'>6. “<em>Feeling, conception, volition, and awareness are likewise.</em> Therefore, monks, whatever forms exist, whether in the past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not other than self, nor are either present in the other. Observe them in this way. <em>Feeling, conception, volition, and awareness are likewise.</em></td>
+  </tr>
+  <tr>
+    <td title='t99.2.7c7'>「比丘，多聞聖弟子於此五受陰非我、非我所，如實觀察。 如實觀察已，於諸世間都無所取。 無所取故，無所著。 無所著故，自覺涅槃： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
+    <td id='p7'>7. “Monks, a well-versed noble disciple truly observes that what’s in these five acquired aggregates is not self and doesn’t belong to self. Having truly observed this, they take hold of nothing from all the world. Because they take hold of nothing, they have no attachments. Because they have no attachments, they realize Nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.7c11'>佛說此經已，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p8'>8. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Form is not self. If form were self, it wouldn’t be that illness and pain arise from form, and there wouldn’t be the desire about form: ‘Let it be so,’ or ‘Let it not be so.’ It’s because form is without self that there’s illness and pain that arise from it, and these desires are possible: ‘Let it be so,’ or ‘Let it not be so.’ <em>Feeling, conception, volition, and consciousness are likewise.</em>
-{:#p2}
+<hr/>
 
-3\. “Monks, what do you think? Is form permanent, or is it impermanent?”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-The monks said to the Buddha, “Impermanent, Bhagavān.”
+<ol>
+<li id="n1">This <em>sūtra</em> is a slightly different version of <a href="SA1_143.html" target="_blank">SĀ 1.143</a>, <a href="SA1_144.html" target="_blank">144</a>, and <a href="SA1_146.html" target="_blank">146</a>, and it’s parallel to <a href="https://suttacentral.net/sn22.59" target="_blank">SN 22.59</a> and <a href="../../other/T102.html" target="_blank">T102</a>. [<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-4\. “Monks, if something is impermanent, is it painful?”
-{:#p4}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 4 April 2024</p>
 
-The monks said to the Buddha, “It’s painful, Bhagavān.”
-
-5\. “If it’s impermanent and painful, it’s liable to change. Would well-versed noble disciples see this as self, other than self, or either of them are present in the other?”
-{:#p5}
-
-The monks said to the Buddha, “No, Bhagavān.”
-
-6\. “<em>Feeling, conception, volition, and consciousness are likewise.</em> Therefore, monks, whatever forms exist, whether past, future, or present, internal or external, crude or fine, beautiful or ugly, or distant or near, they are all not self, not other than to self, nor are either of them present in the other. Observe it in this way. <em>Feeling, conception, volition, and consciousness are likewise.</em>
-{:#p6}
-
-7\. “Monks, well-versed noble disciples truly observe that what’s in these five acquired aggregates is not self and doesn’t belong to self. After truly observing this, they grasp nothing from all the world. Because they grasp nothing, they attach to nothing. Because they attach to nothing, they realize nirvāṇa for themselves: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
-{:#p7}
-
-8\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
-{:#p8}
-
----
-
-### Notes
-
-1. {:#n1} This sūtra is a slightly different version of [SĀ 1.143](SA1_143.html), 144, and [146](SA1_146.html), and it’s parallel to [SN 22.59](https://suttacentral.net/sn22.59){:target="_blank"} and [T102](../alternates/T102.html). [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 November 2023
-{: .revised}
-
----
+<hr/>
